syntax = "proto3";

option go_package = "generate_entity_ids";
option java_multiple_files = true;
option java_package = "io.grpc.generateID";
option java_outer_classname = "GenerateID";

package generate_entity_ids;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc GetEntityID (Request) returns (Reply) {}
}

// The request message containing the user's name.
message Request {
  int64 length = 1;
}

// The response message containing the greetings
message Reply {
  repeated int64 ids = 1;
}
